# Disk2Planet

./: MANIFEST.in  README.md  cma_change_seed_submit.sh  cma_group_submit.sh  fargo_runs_256.csv  get_cma_opt.sh  get_draw_loss_surface.sh  get_draw_loss_surface_and_cma_opt.sh  guild.yml  loss_surf_256.csv  pyproject.toml  requirements-macos.txt  requirements.txt  run_list_cpu_version.sh  run_list_gpu_version.sh
onet_disk2D/: cma_opt.py  draw_loss_surface_cpu.py  draw_loss_surface_gpu.py  transformed_subset_creator.py  utils.py
onet_disk2D/model/: io.py
onet_disk2D/run/: inverse_job.py
onet_disk2D/summary/: guild_cma_opt.py
onet_disk2D/visualization/: __init__.py  cma_error_hist.py  cma_multi_images.py  data_table_builder.py  images.py  inv_loss_surface.py  line_plots.py  log.py  loss_surface.py  parameter_score_1d.py  scatter_plots.py  utils.py
tests/: test_utils.py
tests/run/: test_inverse_job.py  test_inverse_job_pmp.py
