[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onet_disk2D"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["guild_home*"]
